--- a/index.html
+++ b/index.html
@@ -2,96 +2,78 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>I Love Design</title>
-	<meta name="description" content="I Love Design">
+	<title>Chess</title>
+	<meta name="description" content="Chess">
 	<link rel="shortcut icon" href="img/logo_icon.png" type="image/x-icon">
 	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="css/media.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 	<div class="main">
-<div class="row">
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-</div>
-<div class="row">
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-</div>
-<div class="row">
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-</div>
-<div class="row">
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-</div>
-<div class="row">
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-</div>
-<div class="row">
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-</div>
-<div class="row">
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-</div>
-<div class="row">
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-	<div class="box_chess"></div>
-</div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
+		<div class="box_chess"></div>
 	</div>
 </body>
 </html>
